--- a/src/fxml/Path.fxml
+++ b/src/fxml/Path.fxml
@@ -91,7 +91,7 @@
                            <children>
                               <ScrollPane prefHeight="560.0" prefWidth="1276.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <content>
-                                    <Pane fx:id="mapPane" prefHeight="800.0" prefWidth="1280.0" />
+                                    <Pane fx:id="mapPane" />
                                  </content>
                               </ScrollPane>
                            </children>
