--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXSlider?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
@@ -14,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="pane" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
       <SplitPane dividerPositions="0.87468671679198" orientation="VERTICAL" prefHeight="800.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -65,36 +64,11 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <JFXCheckBox text="Exits" GridPane.rowIndex="1">
-                                       <font>
-                                          <Font size="24.0" />
-                                       </font>
-                                    </JFXCheckBox>
-                                    <JFXCheckBox text="Bathrooms">
-                                       <font>
-                                          <Font size="24.0" />
-                                       </font>
-                                    </JFXCheckBox>
-                                    <JFXCheckBox text="Elevators" GridPane.rowIndex="2">
-                                       <font>
-                                          <Font size="24.0" />
-                                       </font>
-                                    </JFXCheckBox>
-                                    <JFXCheckBox text="Vending Machines" GridPane.columnIndex="1">
-                                       <font>
-                                          <Font size="24.0" />
-                                       </font>
-                                    </JFXCheckBox>
-                                    <JFXCheckBox text="Stairs" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                       <font>
-                                          <Font size="24.0" />
-                                       </font>
-                                    </JFXCheckBox>
-                                    <JFXCheckBox GridPane.columnIndex="1" GridPane.rowIndex="2">
-                                       <font>
-                                          <Font size="24.0" />
-                                       </font>
-                                    </JFXCheckBox>
+                                    <JFXButton fx:id="btnbath" prefWidth="150.0" text="Bathrooms" GridPane.halignment="CENTER" />
+                                    <JFXButton fx:id="btnexit" prefWidth="150.0" text="Exits" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                                    <JFXButton fx:id="btnelev" prefWidth="150.0" text="Elevators" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                                    <JFXButton fx:id="btnvend" prefWidth="150.0" text="Vending Machines" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                                    <JFXButton fx:id="btnstairs" prefWidth="150.0" text="Stairs" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                                  </children>
                               </GridPane>
                            </children>
