--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -69,6 +69,7 @@
                                     <JFXButton fx:id="btnelev" onAction="#elevTypePressed" prefWidth="150.0" text="Elevators" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                                     <JFXButton fx:id="btnretail" onAction="#retailTypePressed" prefWidth="150.0" text="Retail" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
                                     <JFXButton fx:id="btnstairs" onAction="#stairsTypePressed" prefWidth="150.0" text="Stairs" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                                    <JFXButton fx:id="btnclear" onAction="#clearPressed" prefWidth="150.0" text="Clear" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                                  </children>
                               </GridPane>
                            </children>
