--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane minHeight="400.0" minWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<Pane minHeight="400.0" minWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
       <AnchorPane fx:id="mainAnchorPane" minHeight="400.0" minWidth="800.0" styleClass="pane">
          <children>
@@ -23,6 +23,11 @@
                </font>
             </JFXButton>
             <JFXButton fx:id="btndirection" buttonType="RAISED" onAction="#directionPressed" prefHeight="50.0" prefWidth="150.0" text="Directions" textFill="WHITE" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="30.0">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </JFXButton>
+            <JFXButton fx:id="ebtn" buttonType="RAISED" layoutX="21.0" layoutY="429.0" onAction="#exitTypePressed" text="Emergency" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
