--- a/src/fxml/Path.fxml
+++ b/src/fxml/Path.fxml
@@ -237,5 +237,14 @@
             </JFXButton>
          </children>
       </VBox>
+      <AnchorPane layoutX="918.0" layoutY="105.0" prefHeight="84.0" prefWidth="128.0" AnchorPane.rightAnchor="0.0">
+         <children>
+            <JFXButton fx:id="btnReverse" layoutX="16.0" layoutY="8.0" onAction="#reversePressed" prefHeight="61.0" prefWidth="106.0" text="Reverse">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
