--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -27,7 +27,7 @@
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="ebtn" buttonType="RAISED" layoutX="21.0" layoutY="429.0" onAction="#exitTypePressed" text="Emergency" textFill="WHITE">
+            <JFXButton fx:id="ebtn" buttonType="RAISED" layoutX="21.0" layoutY="429.0" onAction="#exitTypePressed" text="Emergency" textFill="WHITE" AnchorPane.bottomAnchor="110.0" AnchorPane.leftAnchor="20.0">
                <font>
                   <Font size="24.0" />
                </font>
