--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -4,6 +4,8 @@
 <?import com.jfoenix.controls.JFXSlider?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,15 +15,23 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane minHeight="400.0" minWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<Pane minHeight="400.0" minWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
-      <AnchorPane fx:id="mainAnchorPane" minHeight="400.0" minWidth="800.0" styleClass="pane">
+      <AnchorPane fx:id="mainAnchorPane" layoutX="-5.0" minHeight="400.0" minWidth="800.0" styleClass="pane">
          <children>
             <JFXButton fx:id="btnlogin" onAction="#loginPressed" prefHeight="50.0" prefWidth="150.0" text="Login" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="30.0">
                <font>
                   <Font size="24.0" />
                </font>
             </JFXButton>
+            <JFXButton fx:id="questionButton" layoutX="45.0" layoutY="89.0" mnemonicParsing="false" prefHeight="76.0" prefWidth="100.0" visible="true" onAction="#questionPressed">
+               <graphic>
+                  <ImageView fitHeight="59.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/question.png" />
+                     </image>
+                  </ImageView>
+               </graphic></JFXButton>
             <JFXButton fx:id="btndirection" buttonType="RAISED" onAction="#directionPressed" prefHeight="50.0" prefWidth="150.0" text="Directions" textFill="WHITE" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="30.0">
                <font>
                   <Font size="24.0" />
