--- a/src/fxml/SceneStyle.css
+++ b/src/fxml/SceneStyle.css
@@ -71,6 +71,10 @@
     -fx-prompt-text-fill: white;
 }
 
+.text-on-white{
+    -fx-text-fill: rgb(40,40,60);
+}
+
 .list-view:focused .list-cell:filled:focused:selected {
     -fx-background-color: rgb(163,235,255);
     -fx-background: -fx-accent;
