--- a/src/fxml/Feedback.fxml
+++ b/src/fxml/Feedback.fxml
@@ -126,30 +126,33 @@
                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       </rowConstraints>
                       <children>
-                          <Label alignment="CENTER" prefHeight="19.0" prefWidth="59.0" text="Credits" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER">
+                          <Label alignment="CENTER" text="Credits" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER">
                               <font>
-                                  <Font size="18.0" />
+                                  <Font name="System Bold" size="18.0" />
                               </font>
                           </Label>
-                          <Label alignment="CENTER" layoutX="381.0" layoutY="9.0" prefHeight="19.0" prefWidth="196.0" text="WPI Computer Science Department" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-                          <Label alignment="CENTER" layoutX="312.0" layoutY="38.0" prefHeight="19.0" prefWidth="196.0" text="CS 3733 Software Engineering " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-                          <Label alignment="CENTER" layoutX="312.0" layoutY="63.0" prefHeight="19.0" prefWidth="196.0" text="Professor Wilson Wong" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
-                          <Label alignment="CENTER" layoutX="312.0" layoutY="81.0" prefHeight="19.0" prefWidth="227.0" text="Meghana Bhatia : Documentation Analyst" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
-                          <Label alignment="CENTER" layoutX="312.0" layoutY="104.0" prefHeight="19.0" prefWidth="196.0" text="Leo Grande : Project Manager" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
-                          <Label alignment="CENTER" layoutX="312.0" layoutY="122.0" prefHeight="19.0" prefWidth="206.0" text="Nick Fajardo : Assistant Lead Engineer" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
-                          <Label alignment="CENTER" prefHeight="19.0" prefWidth="268.0" text="William Mosby (Vojta) : Lead Developer Engineer " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="9" />
-                          <Label alignment="CENTER" layoutX="276.0" layoutY="166.0" prefHeight="19.0" prefWidth="204.0" text="Travis Norris : Assitant Lead Engineer " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="10" />
-                          <Label alignment="CENTER" layoutX="308.0" layoutY="188.0" prefHeight="19.0" prefWidth="200.0" text="Jack Palmstrom : Database Engineer " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="12" />
-                          <Label alignment="CENTER" layoutX="310.0" layoutY="210.0" prefHeight="19.0" prefWidth="179.0" text="Andrey Yuzvik : Product Owner" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="15" />
-                          <Label alignment="CENTER" layoutX="321.0" layoutY="232.0" prefHeight="19.0" prefWidth="229.0" text="Oluchukwu Okafor (Chima) : Test Engineer " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="11" />
-                          <Label alignment="CENTER" layoutX="296.0" layoutY="254.0" prefHeight="19.0" prefWidth="174.0" text="Erika Snow : Software Engineer " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="14" />
-                          <Label alignment="CENTER" layoutX="323.0" layoutY="276.0" prefHeight="19.0" prefWidth="207.0" text="Tyrone Patterson : Software Engineer " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="13" />
+                          <Label alignment="CENTER" layoutX="381.0" layoutY="9.0" prefHeight="19.0" prefWidth="196.0" text="WPI Computer Science Department" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                          <Label alignment="CENTER" layoutX="312.0" layoutY="38.0" prefHeight="19.0" prefWidth="196.0" text="CS 3733 Software Engineering " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                          <Label alignment="CENTER" layoutX="312.0" layoutY="63.0" prefHeight="19.0" prefWidth="196.0" text="Professor Wilson Wong" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                          <Label alignment="CENTER" layoutX="312.0" layoutY="81.0" prefHeight="19.0" prefWidth="227.0" text="Meghana Bhatia : Documentation Analyst" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                          <Label alignment="CENTER" layoutX="312.0" layoutY="104.0" prefHeight="19.0" prefWidth="196.0" text="Leo Grande : Project Manager" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
+                          <Label alignment="CENTER" layoutX="312.0" layoutY="122.0" prefHeight="19.0" prefWidth="206.0" text="Nick Fajardo : Assistant Lead Engineer" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                          <Label alignment="CENTER" prefHeight="19.0" prefWidth="268.0" text="William Mosby (Vojta) : Lead Developer Engineer " textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
+                          <Label alignment="CENTER" layoutX="276.0" layoutY="166.0" prefHeight="19.0" prefWidth="204.0" text="Travis Norris : Assitant Lead Engineer " textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
+                          <Label alignment="CENTER" layoutX="308.0" layoutY="188.0" prefHeight="19.0" prefWidth="200.0" text="Jack Palmstrom : Database Engineer " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                          <Label alignment="CENTER" layoutX="310.0" layoutY="210.0" prefHeight="19.0" prefWidth="179.0" text="Andrey Yuzvik : Product Owner" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
+                          <Label alignment="CENTER" contentDisplay="CENTER" layoutX="321.0" layoutY="232.0" prefHeight="19.0" prefWidth="229.0" text="Oluchukwu Okafor (Chima) : Test Engineer " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                          <Label alignment="CENTER" layoutX="296.0" layoutY="254.0" prefHeight="19.0" prefWidth="174.0" text="Erika Snow : Software Engineer " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
+                          <Label alignment="CENTER" layoutX="323.0" layoutY="276.0" prefHeight="19.0" prefWidth="207.0" text="Tyrone Patterson : Software Engineer " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
+                        <Label text="Special Thanks To:" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="9">
+                           <font>
+                              <Font name="System Bold Italic" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label contentDisplay="CENTER" text="Andrew Shinn" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="10" />
+                        <Label text="Brigham &amp; Women's Faulkner Hospital " GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="11" />
                       </children>
                   </GridPane>
               </content>
